Import of TIEDEMANN/uplug-main-0.3.3 from CPAN.
gitpan-cpan-distribution: uplug-main
gitpan-cpan-version:      0.3.3
gitpan-cpan-path:         TIEDEMANN/uplug-main-0.3.3.tar.gz
gitpan-cpan-author:       TIEDEMANN
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,10 @@
 
+* v0.3.3 - Mon Dec 10 19:14:00 CET 2012
+
+- fixed some problems with documentation
+- prepared language packs and Uplug add-ons
+- added documentation for language packs
+
 * v0.3.2 - Fri Dec  7 20:33:14 CET 2012
 
 - added documentation
