Import of TIEDEMANN/uplug-main-0.3.4 from CPAN.
gitpan-cpan-distribution: uplug-main
gitpan-cpan-version:      0.3.4
gitpan-cpan-path:         TIEDEMANN/uplug-main-0.3.4.tar.gz
gitpan-cpan-author:       TIEDEMANN
gitpan-cpan-maturity:     released

--- a/doc/index.pod
+++ b/doc/index.pod
@@ -80,10 +80,10 @@ Uplug is a collection of tools and scripts for processing text-corpora
 
  share/ini/	  some configuration files
  share/lang/	  language specific data
- example/	  small example corpora
+ example/	  small example texts
 
- lib/Uplug.pm      main library for running Uplug modules
- lib/Uplug/	  Uplug libraries
+ lib/Uplug.pm     main library for running Uplug modules
+ lib/Uplug/	  other Uplug modules
 
 
 
