--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,11 @@
+* v0.3.4 - Mon Dec 17 17:08:09 CET 2012
+
+- fixed several issues with installation routines
+- added config files for preparing OPUS data
+- changed handling of Uplug environment variables and standard locations
+- fixed call to Grok tagger/chunker
+- fixed word alignment test
+- fixed POS-tagging for Swedish with Grok
 
 * v0.3.3 - Mon Dec 10 19:14:00 CET 2012
 
