--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+
+* v0.3.5 - Fri Dec 28 23:28:20 CET 2012
+
+- added all dependencies in Makefile.PL
+
 * v0.3.4 - Mon Dec 17 17:08:09 CET 2012
 
 - fixed several issues with installation routines
