Import of TIEDEMANN/uplug-main-0.3.6 from CPAN.
gitpan-cpan-distribution: uplug-main
gitpan-cpan-version:      0.3.6
gitpan-cpan-path:         TIEDEMANN/uplug-main-0.3.6.tar.gz
gitpan-cpan-author:       TIEDEMANN
gitpan-cpan-maturity:     released

--- a/doc/index.pod
+++ b/doc/index.pod
@@ -53,7 +53,7 @@ of those packages.
 
 You may also download the latest source from bitbucket and install all packages in one run:
 
- git clone https://bitbucket.org/tiedeman/uplug.git
+ git clone https://bitbucket.org/tiedemann/uplug.git
  cd uplug
  make all
  sudo make install
